--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -44,7 +44,10 @@ build:
         
     pipeline-scan: 
     needs: build 
-    runs-on: ubuntu-latest 
+    
+    # The type of runner that the job will run on 
+runs-on: ubuntu-latest 
+  
   container:  
    image: veracode/pipeline-scan:latest 
    options: --user root # our normal luser doesn't have privs to write to github directories 
