--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -55,16 +55,16 @@ steps:
 uses: actions/download-artifact@v2 
 with: 
     name: CodePackage
-  - name: Pipeline Scan 
+    name: Pipeline Scan 
 
-      run: | 
+run: | 
 
-        java -jar /opt/veracode/pipeline-scan.jar --veracode_api_id="${{secrets.VERACODE_API_ID}}" --veracode_api_key="${{secrets.VERACODE_API_KEY}}" --fail_on_severity="Very High, High" --file="project.zip" --app_id="${{secrets.VERACODE_APP_ID}}" --json_output_file="results.json" 
+java -jar /opt/veracode/pipeline-scan.jar --veracode_api_id="${{secrets.VERACODE_API_ID}}" --veracode_api_key="${{secrets.VERACODE_API_KEY}}" --fail_on_severity="Very High, High" --file="project.zip" --app_id="${{secrets.VERACODE_APP_ID}}" --json_output_file="results.json" 
 
-      continue-on-error: true 
+continue-on-error: true 
 
 
-    - uses: actions/upload-artifact@v2 
+ - uses: actions/upload-artifact@v2 
 
       with: 
 
