--- a/.github/workflows/veracode.yml
+++ b/.github/workflows/veracode.yml
@@ -1,4 +1,15 @@
+# This workflow will initiate a Veracode Static Analysis Pipeline scan 
+
+ 
+
 name: Veracode Static Analysis Pipeline Scan 
+
+ 
+
+# Controls when the action will run. Triggers the workflow on push or pull request 
+
+# events but only for the master branch 
+
 on: 
 
   workflow_dispatch: 
@@ -11,8 +22,15 @@ on:
 
     branches: [ master ] 
 
+ 
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel 
+
 jobs: 
-build: 
+
+  # This workflow contains a job to build and submit pipeline scan, you will need to customize the build process accordingly and make sure the artifact you build is used as the file input to the pipeline scan file parameter 
+
+  build: 
 
     # The type of runner that the job will run on 
 
@@ -22,7 +40,9 @@ build:
 
     - uses: actions/checkout@v2 
 
-    # zip the project and move it to a staging directory 
+         
+
+  # zip the project and move it to a staging directory 
 
     - name: Zip Project 
 
@@ -30,7 +50,9 @@ build:
 
       env: 
 
-      build-name: project.zip 
+        build-name: project.zip 
+
+       
 
     - name: Archive package 
 
@@ -41,28 +63,51 @@ build:
         name: CodePackage 
 
         path: project.zip 
-        
-    pipeline-scan: 
+
+   
+
+  pipeline-scan: 
+
     needs: build 
-    
-    # The type of runner that the job will run on 
-runs-on: ubuntu-latest 
-container:  
-   image: veracode/pipeline-scan:latest 
-   options: --user root # our normal luser doesn't have privs to write to github directories 
-steps: 
-      - name: Retrieve artifact 
-uses: actions/download-artifact@v2 
-with: 
-    name: CodePackage
-    name: Pipeline Scan 
 
-run: | 
-java -jar /opt/veracode/pipeline-scan.jar --veracode_api_id="${{secrets.VERACODE_API_ID}}" --veracode_api_key="${{secrets.VERACODE_API_KEY}}" --fail_on_severity="Very High, High" --file="project.zip" --app_id="${{secrets.VERACODE_APP_ID}}" --json_output_file="results.json" 
-continue-on-error: true 
-- uses: actions/upload-artifact@v2 
+    runs-on: ubuntu-latest 
 
-with: 
+    container:  
 
-name: ScanResults 
-path: results.json 
+      image: veracode/pipeline-scan:latest 
+
+      options: --user root # our normal luser doesn't have privs to write to github directories 
+
+ 
+
+    steps: 
+
+    - name: Retrieve artifact 
+
+      uses: actions/download-artifact@v2 
+
+      with: 
+
+        name: CodePackage 
+
+     
+
+    #  Submit  project to pipeline scan 
+
+    - name: Pipeline Scan 
+
+      run: | 
+
+        java -jar /opt/veracode/pipeline-scan.jar --veracode_api_id="${{secrets.VERACODE_API_ID}}" --veracode_api_key="${{secrets.VERACODE_API_KEY}}" --fail_on_severity="Very High, High" --file="project.zip" --app_id="${{secrets.VERACODE_APP_ID}}" --json_output_file="results.json" 
+
+      continue-on-error: true 
+
+ 
+
+    - uses: actions/upload-artifact@v2 
+
+      with: 
+
+        name: ScanResults 
+
+        path: results.json 
